<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/central_splitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/item_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_group"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_posted_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_posted_by_text"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/item_group"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_author"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@id/item_posted_by"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/item_posted_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="14 days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_posted_by"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ago"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/item_posted_time"
            app:layout_constraintTop_toBottomOf="@id/item_posted_by"
            />

        <TextView
            android:id="@+id/item_title"
            android:text="@string/item_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_posted_time" />



        <ImageView
            android:id="@+id/item_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/item_rating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_rating"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/gray_bg_2dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_comments"
            app:layout_constraintEnd_toStartOf="@id/central_splitter"
            app:layout_constraintBottom_toBottomOf="@+id/item_comments"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_counter"
            app:icon="@drawable/ic_comment_24"
            android:backgroundTint="@color/gray"
            app:layout_constraintStart_toStartOf="@id/central_splitter"
            app:layout_constraintTop_toBottomOf="@+id/item_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>